--- a/TicTacToe/wwwroot/css/site.css
+++ b/TicTacToe/wwwroot/css/site.css
@@ -35,3 +35,17 @@ body {
         display: none;
     }
 }
+
+#grid {
+    display: grid;
+    grid-template-columns: 100px 100px 100px;
+    grid-template-rows: 100px 100px 100px;
+}
+
+.square{
+    border: 2px solid black;
+    width: 100px;
+    height: 100px;
+    font-size: 60px;
+    text-align: center
+}
